parser/grammar/FlowParser.js
// Generated from parser/grammar/Flow.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import FlowListener from './FlowListener.js';
import FlowVisitor from './FlowVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class FlowParser extends antlr4.Parser {

    static grammarFileName = "Flow.g4";
    static literalNames = [ null, "','", "'|'", "'{'", "'}'", "'('", "')'", 
                            "'='", "'!='", "'=~'", "'!~'", "'+'", "'-'", 
                            "'*'", "'/'", "'>'", "'<'", "'>='", "'<='", 
                            "'=='", "'by'", "'without'", null, null, "'let'", 
                            "'in'", "'and'", "'or'", "'unless'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, "MATCH_EQ", 
                             "MATCH_NEQ", "MATCH_RE", "MATCH_NRE", "OP_ADD", 
                             "OP_SUB", "OP_MUL", "OP_DIV", "OP_GT", "OP_LT", 
                             "OP_GTE", "OP_LTE", "OP_EQ", "BY", "WITHOUT", 
                             "AGGREGATION_OP", "DURATION", "LET", "IN", 
                             "AND", "OR", "UNLESS", "NUMBER", "IDENTIFIER", 
                             "STRING", "COMMENT", "MULTILINE_COMMENT", "WS" ];
    static ruleNames = [ "query", "letExpression", "letBinding", "pipeline", 
                         "pipelineStep", "selector", "labelMatcher", "binarySelector", 
                         "binarySelectorLeg", "binaryLegLeaf", "binaryOperator", 
                         "aggregation", "aligner", "function", "binary" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = FlowParser.ruleNames;
        this.literalNames = FlowParser.literalNames;
        this.symbolicNames = FlowParser.symbolicNames;
    }



	query() {
	    let localctx = new QueryContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, FlowParser.RULE_query);
	    try {
	        this.state = 36;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 24:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 30;
	            this.letExpression();
	            this.state = 31;
	            this.match(FlowParser.EOF);
	            break;
	        case -1:
	        case 2:
	        case 3:
	        case 5:
	        case 29:
	        case 30:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 33;
	            this.pipeline();
	            this.state = 34;
	            this.match(FlowParser.EOF);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	letExpression() {
	    let localctx = new LetExpressionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, FlowParser.RULE_letExpression);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 38;
	        this.match(FlowParser.LET);
	        this.state = 39;
	        this.letBinding();
	        this.state = 44;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===1) {
	            this.state = 40;
	            this.match(FlowParser.T__0);
	            this.state = 41;
	            this.letBinding();
	            this.state = 46;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 47;
	        this.match(FlowParser.IN);
	        this.state = 48;
	        this.pipeline();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	letBinding() {
	    let localctx = new LetBindingContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, FlowParser.RULE_letBinding);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 50;
	        this.match(FlowParser.IDENTIFIER);
	        this.state = 51;
	        this.match(FlowParser.MATCH_EQ);
	        this.state = 52;
	        this.pipeline();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	pipeline() {
	    let localctx = new PipelineContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, FlowParser.RULE_pipeline);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 56;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
	        switch(la_) {
	        case 1:
	            this.state = 54;
	            this.selector();
	            break;

	        case 2:
	            this.state = 55;
	            this.binarySelector();
	            break;

	        }
	        this.state = 62;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===2) {
	            this.state = 58;
	            this.match(FlowParser.T__1);
	            this.state = 59;
	            this.pipelineStep();
	            this.state = 64;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	pipelineStep() {
	    let localctx = new PipelineStepContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, FlowParser.RULE_pipelineStep);
	    try {
	        this.state = 69;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 65;
	            this.aggregation();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 66;
	            this.aligner();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 67;
	            this.function_();
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 68;
	            this.binary();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	selector() {
	    let localctx = new SelectorContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, FlowParser.RULE_selector);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 72;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===30) {
	            this.state = 71;
	            this.match(FlowParser.IDENTIFIER);
	        }

	        this.state = 86;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===3) {
	            this.state = 74;
	            this.match(FlowParser.T__2);
	            this.state = 83;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===30) {
	                this.state = 75;
	                this.labelMatcher();
	                this.state = 80;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	                while(_la===1) {
	                    this.state = 76;
	                    this.match(FlowParser.T__0);
	                    this.state = 77;
	                    this.labelMatcher();
	                    this.state = 82;
	                    this._errHandler.sync(this);
	                    _la = this._input.LA(1);
	                }
	            }

	            this.state = 85;
	            this.match(FlowParser.T__3);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	labelMatcher() {
	    let localctx = new LabelMatcherContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, FlowParser.RULE_labelMatcher);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 88;
	        this.match(FlowParser.IDENTIFIER);
	        this.state = 89;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 1920) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 90;
	        this.match(FlowParser.STRING);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	binarySelector() {
	    let localctx = new BinarySelectorContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, FlowParser.RULE_binarySelector);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 92;
	        this.binarySelectorLeg();
	        this.state = 98;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 1046784) !== 0)) {
	            this.state = 93;
	            this.binaryOperator();
	            this.state = 94;
	            this.binarySelectorLeg();
	            this.state = 100;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	binarySelectorLeg() {
	    let localctx = new BinarySelectorLegContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, FlowParser.RULE_binarySelectorLeg);
	    try {
	        this.state = 106;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 29:
	        case 30:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 101;
	            this.binaryLegLeaf();
	            break;
	        case 5:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 102;
	            this.match(FlowParser.T__4);
	            this.state = 103;
	            this.binarySelector();
	            this.state = 104;
	            this.match(FlowParser.T__5);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	binaryLegLeaf() {
	    let localctx = new BinaryLegLeafContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, FlowParser.RULE_binaryLegLeaf);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 108;
	        _la = this._input.LA(1);
	        if(!(_la===29 || _la===30)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	binaryOperator() {
	    let localctx = new BinaryOperatorContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, FlowParser.RULE_binaryOperator);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 110;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 1046784) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	aggregation() {
	    let localctx = new AggregationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, FlowParser.RULE_aggregation);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 112;
	        this.match(FlowParser.AGGREGATION_OP);
	        this.state = 126;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===20 || _la===21) {
	            this.state = 113;
	            _la = this._input.LA(1);
	            if(!(_la===20 || _la===21)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }

	            this.state = 114;
	            this.match(FlowParser.T__4);
	            this.state = 123;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===30) {
	                this.state = 115;
	                this.match(FlowParser.IDENTIFIER);
	                this.state = 120;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	                while(_la===1) {
	                    this.state = 116;
	                    this.match(FlowParser.T__0);
	                    this.state = 117;
	                    this.match(FlowParser.IDENTIFIER);
	                    this.state = 122;
	                    this._errHandler.sync(this);
	                    _la = this._input.LA(1);
	                }
	            }

	            this.state = 125;
	            this.match(FlowParser.T__5);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	aligner() {
	    let localctx = new AlignerContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, FlowParser.RULE_aligner);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 128;
	        this.match(FlowParser.IDENTIFIER);
	        this.state = 129;
	        this.match(FlowParser.DURATION);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	function_() {
	    let localctx = new FunctionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, FlowParser.RULE_function);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 131;
	        this.match(FlowParser.IDENTIFIER);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	binary() {
	    let localctx = new BinaryContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, FlowParser.RULE_binary);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 133;
	        this.binaryOperator();
	        this.state = 134;
	        this.binaryLegLeaf();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

FlowParser.EOF = antlr4.Token.EOF;
FlowParser.T__0 = 1;
FlowParser.T__1 = 2;
FlowParser.T__2 = 3;
FlowParser.T__3 = 4;
FlowParser.T__4 = 5;
FlowParser.T__5 = 6;
FlowParser.MATCH_EQ = 7;
FlowParser.MATCH_NEQ = 8;
FlowParser.MATCH_RE = 9;
FlowParser.MATCH_NRE = 10;
FlowParser.OP_ADD = 11;
FlowParser.OP_SUB = 12;
FlowParser.OP_MUL = 13;
FlowParser.OP_DIV = 14;
FlowParser.OP_GT = 15;
FlowParser.OP_LT = 16;
FlowParser.OP_GTE = 17;
FlowParser.OP_LTE = 18;
FlowParser.OP_EQ = 19;
FlowParser.BY = 20;
FlowParser.WITHOUT = 21;
FlowParser.AGGREGATION_OP = 22;
FlowParser.DURATION = 23;
FlowParser.LET = 24;
FlowParser.IN = 25;
FlowParser.AND = 26;
FlowParser.OR = 27;
FlowParser.UNLESS = 28;
FlowParser.NUMBER = 29;
FlowParser.IDENTIFIER = 30;
FlowParser.STRING = 31;
FlowParser.COMMENT = 32;
FlowParser.MULTILINE_COMMENT = 33;
FlowParser.WS = 34;

FlowParser.RULE_query = 0;
FlowParser.RULE_letExpression = 1;
FlowParser.RULE_letBinding = 2;
FlowParser.RULE_pipeline = 3;
FlowParser.RULE_pipelineStep = 4;
FlowParser.RULE_selector = 5;
FlowParser.RULE_labelMatcher = 6;
FlowParser.RULE_binarySelector = 7;
FlowParser.RULE_binarySelectorLeg = 8;
FlowParser.RULE_binaryLegLeaf = 9;
FlowParser.RULE_binaryOperator = 10;
FlowParser.RULE_aggregation = 11;
FlowParser.RULE_aligner = 12;
FlowParser.RULE_function = 13;
FlowParser.RULE_binary = 14;

class QueryContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FlowParser.RULE_query;
    }

	letExpression() {
	    return this.getTypedRuleContext(LetExpressionContext,0);
	};

	EOF() {
	    return this.getToken(FlowParser.EOF, 0);
	};

	pipeline() {
	    return this.getTypedRuleContext(PipelineContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.enterQuery(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.exitQuery(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof FlowVisitor ) {
	        return visitor.visitQuery(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class LetExpressionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FlowParser.RULE_letExpression;
    }

	LET() {
	    return this.getToken(FlowParser.LET, 0);
	};

	letBinding = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(LetBindingContext);
	    } else {
	        return this.getTypedRuleContext(LetBindingContext,i);
	    }
	};

	IN() {
	    return this.getToken(FlowParser.IN, 0);
	};

	pipeline() {
	    return this.getTypedRuleContext(PipelineContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.enterLetExpression(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.exitLetExpression(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof FlowVisitor ) {
	        return visitor.visitLetExpression(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class LetBindingContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FlowParser.RULE_letBinding;
    }

	IDENTIFIER() {
	    return this.getToken(FlowParser.IDENTIFIER, 0);
	};

	MATCH_EQ() {
	    return this.getToken(FlowParser.MATCH_EQ, 0);
	};

	pipeline() {
	    return this.getTypedRuleContext(PipelineContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.enterLetBinding(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.exitLetBinding(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof FlowVisitor ) {
	        return visitor.visitLetBinding(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class PipelineContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FlowParser.RULE_pipeline;
    }

	selector() {
	    return this.getTypedRuleContext(SelectorContext,0);
	};

	binarySelector() {
	    return this.getTypedRuleContext(BinarySelectorContext,0);
	};

	pipelineStep = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(PipelineStepContext);
	    } else {
	        return this.getTypedRuleContext(PipelineStepContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.enterPipeline(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.exitPipeline(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof FlowVisitor ) {
	        return visitor.visitPipeline(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class PipelineStepContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FlowParser.RULE_pipelineStep;
    }

	aggregation() {
	    return this.getTypedRuleContext(AggregationContext,0);
	};

	aligner() {
	    return this.getTypedRuleContext(AlignerContext,0);
	};

	function_() {
	    return this.getTypedRuleContext(FunctionContext,0);
	};

	binary() {
	    return this.getTypedRuleContext(BinaryContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.enterPipelineStep(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.exitPipelineStep(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof FlowVisitor ) {
	        return visitor.visitPipelineStep(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class SelectorContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FlowParser.RULE_selector;
    }

	IDENTIFIER() {
	    return this.getToken(FlowParser.IDENTIFIER, 0);
	};

	labelMatcher = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(LabelMatcherContext);
	    } else {
	        return this.getTypedRuleContext(LabelMatcherContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.enterSelector(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.exitSelector(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof FlowVisitor ) {
	        return visitor.visitSelector(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class LabelMatcherContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FlowParser.RULE_labelMatcher;
    }

	IDENTIFIER() {
	    return this.getToken(FlowParser.IDENTIFIER, 0);
	};

	STRING() {
	    return this.getToken(FlowParser.STRING, 0);
	};

	MATCH_EQ() {
	    return this.getToken(FlowParser.MATCH_EQ, 0);
	};

	MATCH_NEQ() {
	    return this.getToken(FlowParser.MATCH_NEQ, 0);
	};

	MATCH_RE() {
	    return this.getToken(FlowParser.MATCH_RE, 0);
	};

	MATCH_NRE() {
	    return this.getToken(FlowParser.MATCH_NRE, 0);
	};

	enterRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.enterLabelMatcher(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.exitLabelMatcher(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof FlowVisitor ) {
	        return visitor.visitLabelMatcher(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class BinarySelectorContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FlowParser.RULE_binarySelector;
    }

	binarySelectorLeg = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(BinarySelectorLegContext);
	    } else {
	        return this.getTypedRuleContext(BinarySelectorLegContext,i);
	    }
	};

	binaryOperator = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(BinaryOperatorContext);
	    } else {
	        return this.getTypedRuleContext(BinaryOperatorContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.enterBinarySelector(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.exitBinarySelector(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof FlowVisitor ) {
	        return visitor.visitBinarySelector(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class BinarySelectorLegContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FlowParser.RULE_binarySelectorLeg;
    }

	binaryLegLeaf() {
	    return this.getTypedRuleContext(BinaryLegLeafContext,0);
	};

	binarySelector() {
	    return this.getTypedRuleContext(BinarySelectorContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.enterBinarySelectorLeg(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.exitBinarySelectorLeg(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof FlowVisitor ) {
	        return visitor.visitBinarySelectorLeg(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class BinaryLegLeafContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FlowParser.RULE_binaryLegLeaf;
    }

	IDENTIFIER() {
	    return this.getToken(FlowParser.IDENTIFIER, 0);
	};

	NUMBER() {
	    return this.getToken(FlowParser.NUMBER, 0);
	};

	enterRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.enterBinaryLegLeaf(this);
		}
	}
